--- a/src/components/Sidebar/components/SideMenu/SideMenu.module.css
+++ b/src/components/Sidebar/components/SideMenu/SideMenu.module.css
@@ -29,7 +29,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: inherit;
   padding: 0.25rem;
   border-radius: 5px;
   transition: all 0.3s ease-in-out;
@@ -77,14 +76,14 @@
   .sideMenu {
     position: sticky;
     top: 0;
-    z-index: auto;
+    z-index: 10;
+    background-color: var(--background-color);
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     border-bottom-width: 1px;
     height: 50px;
-    background-color: transparent;
     padding: 0.1rem 0rem;
     width: 100%;
   }
