--- a/src/components/Sidebar/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/components/Sidebar/Sidebar.module.css
@@ -8,9 +8,6 @@
   background-color: var(--background-color);
   color: var(--text-color);
   transition: transform 0.3s ease;
-  box-shadow:
-    rgba(0, 0, 0, 0.15) 0px 10px 20px,
-    rgba(0, 0, 0, 0.1) 0px 3px 6px;
   overflow-y: auto;
   padding: 15px;
 }
